--- a/Projecto1.html
+++ b/Projecto1.html
@@ -15,7 +15,7 @@
       <nav>
         <a href="#inicio">Inicio</a>
         <a href="#torneos">Torneos</a>
-        <a href="#coleccion">Colección</a>
+        <a href="#profesionales">Jugadores</a>
         <a href="#contacto">Contacto</a>
       </nav>
     </div>
@@ -57,14 +57,14 @@
     <p>Haz clic en un equipo para ver un jugador destacado:</p>
 
     <div class="equipos-logos">
-      <img src="logos/Madrid.png" alt="Madrid" class="logo-equipo" data-equipo="Madrid" />
-      <img src="logos/Barcelona.png" alt="Barcelona" class="logo-equipo" data-equipo="Barcelona" />
-      <img src="logos/Valencia.png" alt="Valencia" class="logo-equipo" data-equipo="Valencia" />
-      <img src="logos/Sevilla.png" alt="Sevilla" class="logo-equipo" data-equipo="Sevilla" />
-      <img src="logos/Málaga.png" alt="Málaga" class="logo-equipo" data-equipo="Málaga" />
-      <img src="logos/Zaragoza.png" alt="Zaragoza" class="logo-equipo" data-equipo="Zaragoza" />
-      <img src="logos/Bilbao.png" alt="Bilbao" class="logo-equipo" data-equipo="Bilbao" />
-      <img src="logos/Gran Canaria.png" alt="Gran Canaria" class="logo-equipo" data-equipo="Gran Canaria" />
+      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Real_Madrid_CF.svg/1200px-Real_Madrid_CF.svg.png" alt="Real Madrid" class="logo-equipo" data-equipo="Madrid" />
+      <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/1200px-FC_Barcelona_%28crest%29.svg.png" alt="Barcelona" class="logo-equipo" data-equipo="Barcelona" />
+      <img src= https://upload.wikimedia.org/wikipedia/commons/d/d0/Valencia-Basket-Club-2017.png alt="Valencia" class="logo-equipo" data-equipo="Valencia" />
+      <img src=https://images.seeklogo.com/logo-png/3/1/club-deportivo-baloncesto-sevilla-logo-png_seeklogo-31963.png alt="Sevilla" class="logo-equipo" data-equipo="Sevilla" />
+      <img src="https://api.clupik.com/clubs/735/seo/image.jpg" alt="Málaga" class="logo-equipo" data-equipo="Málaga" />
+      <img src="https://api.clupik.com/clubs/117/images/splash.png" alt="Zaragoza" class="logo-equipo" data-equipo="Zaragoza" />
+      <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/Bilbaobasket.png" alt="Bilbao" class="logo-equipo" data-equipo="Bilbao" />
+      <img src="https://upload.wikimedia.org/wikipedia/en/c/c7/CB_Gran_Canaria_logo.svg" alt="Gran Canaria" class="logo-equipo" data-equipo="Gran Canaria" />
     </div>
 
     <div id="jugador-profesional" class="jugador-info">
@@ -98,57 +98,57 @@
       dorsal: 16,
       dni: "67890123F",
       equipo: "Madrid",
-      logo: "logos/Madrid.png"
+      logo:"https://upload.wikimedia.org/wikipedia/en/thumb/5/56/Real_Madrid_CF.svg/1200px-Real_Madrid_CF.svg.png"
     },
     {
       nombre: "Ricky Rubio",
       dorsal: 9,
       dni: "78901234G",
       equipo: "Barcelona",
-      logo: "logos/Barcelona.png"
+      logo: "https://upload.wikimedia.org/wikipedia/en/thumb/4/47/FC_Barcelona_%28crest%29.svg/1200px-FC_Barcelona_%28crest%29.svg.png"
     },
     {
       nombre: "Juan Carlos Navarro",
       dorsal: 11,
       dni: "89012345H",
       equipo: "Valencia",
-      logo: "logos/Valencia.png"
+      logo: "https://upload.wikimedia.org/wikipedia/commons/d/d0/Valencia-Basket-Club-2017.png"
     },
     {
       nombre: "Marc Gasol",
       dorsal: 33,
       dni: "90123456I",
       equipo: "Sevilla",
-      logo: "logos/Sevilla.png"
+      logo: "https://images.seeklogo.com/logo-png/3/1/club-deportivo-baloncesto-sevilla-logo-png_seeklogo-31963.png"
     },
     {
       nombre: "Sergio Llull",
       dorsal: 23,
       dni: "01234567J",
       equipo: "Málaga",
-      logo: "logos/Málaga.png"
+      logo: "https://api.clupik.com/clubs/735/seo/image.jpg"
     },
     {
       nombre: "Rudy Fernández",
       dorsal: 5,
       dni: "11223344K",
       equipo: "Zaragoza",
-      logo: "logos/Zaragoza.png"
+      logo: "https://api.clupik.com/clubs/117/images/splash.png"
     },
     {
       nombre: "Felipe Reyes",
       dorsal: 14,
       dni: "22334455L",
       equipo: "Bilbao",
-      logo: "logos/Bilbao.png"
+      logo: "https://upload.wikimedia.org/wikipedia/en/5/5d/Bilbaobasket.png"
     },
     {
       nombre: "José Calderón",
       dorsal: 8,
       dni: "33445566M",
       equipo: "Gran Canaria",
-      logo: "logos/Gran Canaria.png"
-    }
+      logo: "https://upload.wikimedia.org/wikipedia/en/c/c7/CB_Gran_Canaria_logo.svg"
+    },
   ];
 
   document.querySelectorAll('.logo-equipo').forEach(logo => {
@@ -176,3 +176,4 @@
 
 </body>
 </html>
+
